  - replace site_yaml_path with playbook_path.
  - Deprecated these keys: ['site_yaml_path', 'inventory_config', 'variable_manager_config', 'passwords', 'modules', 'private_key_file'].
  - Handle Ansible-Playbook Error codes.

2.1.1:
  - Fix bug preventing passing path or content of Ansible Inventory file.

2.2.0:
  - Ansible Playbook Additional Args

2.3.0:
  - Support run `ansible.cloudify_ansible.tasks.run` in `establish` action.

2.4.0:
  - Unlink `source` from `target` on scale down by `ansible.cloudify_ansible.tasks.ansible_remove_host`.
  - Add `resumable` support to operations
  - Support `ansible_ssh_pass` in `agent_config`.
  - Fix support for `cfy local`.

2.5.0:
  - Update Ansible Version to use 2.8.x
  - Update Ansible examples

2.6.0:
  - Add support for new node type called `cloudify.nodes.ansible.Playbook`
  - Add support for new relationship `cloudify.ansible.relationships.run_on_host` which runs on `establish` operation
  - Enhance handling string value for ansible inventory `sources`
  - Update Ansible SDK execution to use cloudify script runner for running command
  - Update handling logging for running Ansible command

2.7.0:
  - Support agent_host "local" execution.

2.7.1:
  - Support changing the default Ansible configuration executable path.
  - Better handle logging based on customer choice of sensitive data.
  - Support refresh Ansible playbook-with-different-name from another blueprint using deployment update.
  - Pin Ansible version to latest stable.

2.8.0:
  - Support playbook from URL and added reload playbook workflow.

2.8.1:
  - Use shared resource downloader from cloudify-utilities-sdk.
  - Fix upload blueprint to 4.5.5

2.8.2:
  - Handle private key logging.

2.9.0:
  - Add additional parameters(can be also passed by additional_args in old plugin versions): start_at_task, timeout and etc.

2.9.1:
  - Fix Bug introduced by plugin yaml changes in 2.9.1

2.9.2:
  - Update wagon builder to py2py3 wagon and add rhel wagon builder.