@@ -1,3 +1,8 @@
-https://github.com/cloudify-cosmo/cloudify-common/archive/master.zip#egg=cloudify[dispatcher]
 nose
 mock
+
+# For integration tests
+git+https://github.com/cloudify-cosmo/cloudify-common@master#egg=cloudify-common[dispatcher]==master
+git+https://github.com/cloudify-cosmo/cloudify-cli@master#egg=cloudify-cli==master
+pytest==4.6.3
+pyyaml==3.12
